[project]
name = "langchain-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "black==25.1.0",
    "isort==6.0.1",
    "langchain==1.2.10",
    "langchain-cerebras>=0.8.2",
    "langchain-classic==1.0.1",
    "langchain-tavily==0.2.17",
    "python-dotenv==1.1.1",
]
